--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,86 @@
-body{
-    background-color: green;
+* {
+    margin: 0;
+    padding: 0;
+    font-size: 16;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
+}
+
+.nav {
+    margin: 5px;
+    padding: 2px;
+}
+
+.nav-ul {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    height: 10vh;
+}
+
+.nav-link {
+    font-size: 20;
+    display: inline; 
+    margin: 5px;
+}
+
+.about {
+    display: flex;
+    height: 25vh;
+    background-color: grey;
+}
+
+.about #profile-pic {
+    height: 80%;
+    padding: 3px 5px 3px 5px;
+}
+
+.projects {
+    display: flex;
+    height: 25vh;
+    background-color: lightblue;
+}
+
+.experience {
+    display: flex;
+    height: 25vh;
+    background-color: lightyellow;
+}
+
+footer {
+    margin: 5px;
+    padding: 2px;
+}
+
+.footer-ul {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    height: 10vh;
+}
+
+.github {
+    font-size: 20px;
+    display: inline;
+    padding: 5px;
+}
+
+.linked-in {
+    font-size: 20px;
+    display: inline;
+    padding: 5px;
+}
+
+.codepen {
+    font-size: 20px;
+    display: inline;
+    padding: 5px;
 }
