--- a/style/main.css
+++ b/style/main.css
@@ -54,6 +54,8 @@ main {
 /* slideshow container */
 
 .slideshow-container {
+    display: flex;
+    height: 25vh;
     max-width: 1000px;
     position: relative;
     margin: auto;
@@ -63,6 +65,7 @@ main {
 
 .projects {
     display: none;
+    position: center;
 }
 
 /* Next & previous buttons */
@@ -74,7 +77,7 @@ main {
     width: auto;
     margin-top: -22px;
     padding: 16px;
-    color: whitesmoke;
+    color: hotpink;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
