--- a/style/main.css
+++ b/style/main.css
@@ -40,7 +40,7 @@ main {
     background-color: grey;
     align-items: center;
     display: flex;
-    height: 25vh;
+    height: 30vh;
     
 }
 
@@ -55,7 +55,8 @@ main {
 
 .slideshow-container {
     display: flex;
-    height: 25vh;
+    justify-content: center;
+    height: 40vh;
     max-width: 1000px;
     position: relative;
     margin: auto;
@@ -65,7 +66,7 @@ main {
 
 .projects {
     display: none;
-    position: center;
+    position: absolute;
 }
 
 /* Next & previous buttons */
@@ -88,6 +89,12 @@ main {
 /* Position the "next button" to the right */
 .next {
     right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* position the "prev button" to the left */
+.prev {
+    left: 0;
     border-radius: 3px 0 0 3px;
 }
 
@@ -155,7 +162,7 @@ main {
     background-color: lightyellow;
     align-items: center;
     display: flex;
-    height: 25vh;
+    height: 10vh;
 }
 
 /* Footer/Social Navigation */
