--- a/style/main.css
+++ b/style/main.css
@@ -46,7 +46,7 @@ main {
 
 .about #profile-pic {
     height: 80%;
-    width: 100px;
+    width: auto;
     border-radius: 50%;
     padding: 3px 5px 3px 5px;
 }
@@ -56,18 +56,28 @@ main {
 .slideshow-container {
     display: flex;
     justify-content: center;
-    height: 40vh;
-    max-width: 1000px;
+    align-content: center;
+    height: 100vh;
+    /* max-width: 1000px; */
     position: relative;
-    margin: auto;
+    padding: 2%;
+    margin: auto; 
 }
 
 /* Hide the images by default */
 
 .projects {
-    display: none;
+    display: flex;
     position: absolute;
+    
 }
+
+.slide-img {
+    min-width: 100%;
+    height: auto;
+    /* object-fit: cover; */
+    /* vertical-align: bottom; */
+} 
 
 /* Next & previous buttons */
 
