--- a/style/main.css
+++ b/style/main.css
@@ -54,11 +54,10 @@ main {
 /* slideshow container */
 
 .slideshow-container {
+    background-color: seashell;
     display: flex;
     justify-content: center;
-    align-content: center;
-    height: 100vh;
-    /* max-width: 1000px; */
+    align-items: center;
     position: relative;
     padding: 2%;
     margin: auto; 
@@ -66,18 +65,28 @@ main {
 
 /* Hide the images by default */
 
-.projects {
-    display: flex;
-    position: absolute;
+/* #projects {
     
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    position: relative;
+      
+} */
+
+/* #img-div {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+} */
+
+#slide-img {
+    width: 60vw;
+    height: 80vh;
+     
 }
 
-.slide-img {
-    min-width: 100%;
-    height: auto;
-    /* object-fit: cover; */
-    /* vertical-align: bottom; */
-} 
 
 /* Next & previous buttons */
 
