--- a/style/main.css
+++ b/style/main.css
@@ -44,6 +44,10 @@ main {
     align-items: center;
     display: flex;
     height: 30vh;
+    border-radius: 20px;
+    box-shadow: 2px 2px #69849b;
+    padding: 1%;
+    margin: 2% 8%;
     
 }
 
@@ -52,7 +56,7 @@ main {
     width: auto;
     border-radius: 20px;
     padding: 3px 5px 3px 5px;
-    margin: 0 0 0 20px;
+    margin: 0 0 0 10px;
 }
 
 /* slideshow container */
@@ -63,7 +67,6 @@ main {
     justify-content: center;
     align-items: center;
     position: relative;
-    padding: 2px;
     margin: 2% 16%; 
 }
 
@@ -72,6 +75,7 @@ main {
 }
 
 #slide-img {
+    border-radius: 5px;
     width: 50vw;
     height: 60vh;
      
