--- a/style/main.css
+++ b/style/main.css
@@ -17,6 +17,11 @@ main {
 }
 
 /* Header/Navigation */
+.head {
+    background-color: white;
+    border: 2px;
+    border-color: black;
+}
 
 .nav {
     margin: 5px;
@@ -43,7 +48,7 @@ main {
     background-color: grey;
     align-items: center;
     display: flex;
-    height: 30vh;
+    /* height: 30vh; */
     border-radius: 20px;
     box-shadow: 2px 2px #69849b;
     padding: 1%;
@@ -52,11 +57,11 @@ main {
 }
 
 .about #profile-pic {
-    height: 70%;
-    width: auto;
+    height: auto;
+    width: 10vw;
     border-radius: 20px;
     padding: 3px 5px 3px 5px;
-    margin: 0 0 0 10px;
+    margin: 0 0 0 5px;
 }
 
 /* slideshow container */
