--- a/style/main.css
+++ b/style/main.css
@@ -66,7 +66,7 @@ h3 {
     background-image: linear-gradient(to bottom right,#d0c3bd, #dcdcdd, #69849b, #3d6a66, #1d2424);
     align-items: center;
     display: flex;
-    border-radius: 20px;
+    border-radius: 5px;
     box-shadow: 2px 2px #69849b;
     padding: 1%;
     margin: 2% 8%;   
@@ -218,22 +218,28 @@ h3 {
     border-radius: 5px;
 }
 
-.contact-input {
-    height: 5vh;
-    margin: .15% 30%;
-    border-radius: 5px;
-}
-
-#text-area {
-    margin: .15% 30%;
-    border-radius: 5px;
-}
-
-#contact-button {
+#contact-input {
     height: 7vh;
     width: 20vw;
     margin: .15% 30%;
     border-radius: 5px;
+    box-shadow: 1px 1px #1d2424;
+}
+
+#text-area {
+    height: 30vh;
+    width: 40vw;
+    margin: .15% 30%;
+    border-radius: 5px;
+    box-shadow: 1px 1px #1d2424;
+}
+
+#contact-button {
+    height: 7vh;
+    width: 15vw;
+    margin: .15% 30%;
+    border-radius: 5px;
+    box-shadow: 1px 1px #1d2424;
 }
 /* Footer/Social Navigation */
 
