--- a/style/main.css
+++ b/style/main.css
@@ -27,17 +27,36 @@ h3 {
 .head {
     background-color: #dcdcdd;
 }
+#title-row {
+    display: flex;
+}
+
+#col-pic {
+    flex: 5%;
+}
+
+#col-name {
+    flex: 90%;
+}
+
+#profile-pic {
+    height: auto;
+    width: 10vw;
+    border-radius: 20px;
+    padding: 3px 5px 3px 5px;
+    margin: 10% 0 0 15%;
+}
 
 #header-h1 {
-    margin: 1% 0 0 2%;
+    margin: 10% 60% 0 2%;
 }
 
 #header-h4 {
-    margin: 0 2%;
+    margin: 0 60% 0 2%;
 }
 
 .nav {
-    margin: 5px;
+    margin: 0 0 0 60%;
     padding: 2px;
 }
 
@@ -45,6 +64,7 @@ h3 {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    
 }
 
 .nav-link {
@@ -61,32 +81,38 @@ h3 {
 }
 
 /* ABOUT SECTION */
-
-.about {
-    background-image: linear-gradient(to bottom right,#d0c3bd, #dcdcdd, #69849b, #3d6a66, #1d2424);
-    align-items: center;
+#about-section {
     display: flex;
+}
+
+#about {
+    flex: 50%;
+    background-image: linear-gradient(to bottom right,#d0c3bd, #dcdcdd, #69849b, #3d6a66, #1d2424);
+    align-items: left;
     border-radius: 5px;
     box-shadow: 2px 2px #69849b;
     padding: 1%;
-    margin: 2% 8%;   
+    margin: 1% 3%;   
 }
 
 #about-h3 {
     margin: 0 15% 0 0;
 }
 
-.about #profile-pic {
-    height: auto;
-    width: 10vw;
-    border-radius: 20px;
-    padding: 3px 5px 3px 5px;
-    margin: 0 0 0 5px;
-}
-
 #about-p {
     margin: 0 2%;
 }
+
+/* EXPERIENCE SECTION */
+#experience {
+    flex: 50%;
+    background-image: linear-gradient(to bottom right,#d0c3bd, #dcdcdd, #69849b, #3d6a66, #1d2424);
+    align-items: center;
+    border-radius: 5px;
+    padding: 1%;
+    margin: 1% 3%;
+}
+
 /* PROJECTS SECTION */
 
 .slideshow-container {
@@ -196,17 +222,6 @@ h3 {
 @keyframes fade {
     from {opacity: .4}
     to {opacity: 1}
-}
-
-/* EXPERIENCE SECTION */
-.experience {
-    flex-direction: row;
-    background-color:#dcdcdd;
-    align-items: center;
-    font-size: 20px;
-    border-radius: 5px;
-    padding: 1%;
-    margin: 2% 8%;
 }
 
 /* CONTACT SECTION */
