--- a/style/main.css
+++ b/style/main.css
@@ -18,11 +18,6 @@ main {
     border-color: black;
 }
 
-h3 {
-    margin: 2% 0;
-    text-align: center;
-}
-
 /* Header/Navigation */
 .head {
     background-color: #dcdcdd;
@@ -69,7 +64,7 @@ h3 {
 
 .nav-link {
     color: #1d2424;
-    font-size: 18px;
+    font-size: 20px;
     text-decoration: none;
     display: block;
     padding: 5px; 
@@ -92,15 +87,17 @@ h3 {
     border-radius: 5px;
     box-shadow: 2px 2px #69849b;
     padding: 1%;
-    margin: 1% 3%;   
+    margin: 4% 2%;   
 }
 
 #about-h3 {
+    font-size: 25px;
+    text-shadow: 1px 1px whitesmoke;
     margin: 0 15% 0 0;
 }
 
 #about-p {
-    margin: 0 2%;
+    margin: 1% 2%;
 }
 
 /* EXPERIENCE SECTION */
@@ -110,10 +107,15 @@ h3 {
     align-items: center;
     border-radius: 5px;
     padding: 1%;
-    margin: 1% 3%;
+    margin: 4% 2%;
 }
 
 /* PROJECTS SECTION */
+#p-c-h3 {
+    font-size: 25px;
+    text-shadow: 1px 1px whitesmoke;
+    margin: 1% 45% 1% 45%;
+}
 
 .slideshow-container {
     background-color: none;
