--- a/style/main.css
+++ b/style/main.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-size: 16;
+    font-family: 'Rajdhani', 'sans-serif';
 }
 
 body {
@@ -36,14 +37,14 @@ main {
 
 #profile-pic {
     height: auto;
-    width: 10vw;
+    width: 7vw;
     border-radius: 20px;
     padding: 3px 5px 3px 5px;
-    margin: 10% 0 0 15%;
+    margin: 12% 0 0 15%;
 }
 
 #header-h1 {
-    margin: 10% 60% 0 2%;
+    margin: 5% 60% 0 2%;
 }
 
 #header-h4 {
@@ -82,7 +83,8 @@ main {
 
 #about {
     flex: 50%;
-    background-image: linear-gradient(to bottom right,#d0c3bd, #dcdcdd, #69849b, #3d6a66, #1d2424);
+    background-color: none;
+    /* background-image: linear-gradient(to bottom right,#d0c3bd, #dcdcdd, #69849b, #3d6a66, #1d2424); */
     align-items: left;
     border-radius: 5px;
     box-shadow: 2px 2px #69849b;
@@ -134,8 +136,8 @@ main {
 
 #slide-img {
     border-radius: 5px;
-    width: 50vw;
-    height: 60vh;   
+    width: 60vw;
+    height: 70vh;   
 }
 
 /* Next & previous buttons */
