--- a/style/main.css
+++ b/style/main.css
@@ -228,8 +228,46 @@ main {
     to {opacity: 1}
 }
 
-/* CONTACT SECTION */
+/* CONTACT MODAL */
+.modal {
+    display: none; /* hide by default */
+    position: fixed;
+    z-index: 1; /* sits on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; /* enables scroll if needed */
+    background-color: rgb(0, 0, 0); /* fallback color */
+    background-color: rgba (0, 0, 0, 0.4); /* black with opacity */
+}
 
+/* modal content box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+/* close button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+/* Contact Form */
 #contact {
     display: flex;
     flex-direction: column;
