--- a/style/main.css
+++ b/style/main.css
@@ -267,7 +267,7 @@ main {
 
 /* modal content box */
 .modal-content {
-    background-image: linear-gradient(to bottom right,#d0c3bd, #dcdcdd, #69849b, #3d6a66, #1d2424);
+    background-color:#dcdcdd;
     border-radius: 5px;
     margin: 15% auto; /* 15% from top and centered */
     padding: 20px;
@@ -303,7 +303,8 @@ main {
     font-size: 16px;
     background-color: #EDF5E1;
     height: 7vh;
-    width: 20vw;
+    width: 25vw;
+    padding: 1%;
     margin: .5% 30%;
     border-radius: 5px;
     box-shadow: 1px 1px #1d2424;
@@ -312,8 +313,9 @@ main {
 #text-area {
     font-size: 16px;
     background-color: #EDF5E1;
-    height: 30vh;
-    width: 30vw;
+    height: 20vh;
+    width: 25vw;
+    padding: 1%;
     margin: .5% 30%;
     border-radius: 5px;
     box-shadow: 1px 1px #1d2424;
@@ -322,12 +324,18 @@ main {
 #contact-button {
     font-size: 16px;
     color: #1d2424;
-    background-color:#dcdcdd;
+    background-color: rgba(178, 188, 197, 0.8);
     height: 7vh;
     width: 15vw;
     margin: .15% 30%;
     border-radius: 5px;
     box-shadow: 1px 1px #1d2424;
+}
+
+#contact-button:hover {
+    background-color: #69849b;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
 }
 /* Footer/Social Navigation */
 
